# djoser

./: .coverage  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CREDITS.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  RELEASE.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_docstring.py  tox.ini
.github/: dependabot.yml
.github/workflows/: code-quality.yml  publish_pypi.yml  test-suite.yml
.github/workflows/.github_reusable/: poetry-setup.yml
djoser/: .codacy.yml  __init__.py  auth_backends.py  backends.py  compat.py  conf.py  config.py  constants.py  email.py  email_mixins.py  emails.py  exceptions.py  mixins.py  permissions.py  serializers.py  settings.py  signals.py  urls.py  utils.py  views.py
djoser/locale/ca/LC_MESSAGES/: django.po
djoser/locale/cs/LC_MESSAGES/: django.po
djoser/locale/de/LC_MESSAGES/: django.po
djoser/locale/es/LC_MESSAGES/: django.po
djoser/locale/fa/LC_MESSAGES/: django.po
djoser/locale/fr/LC_MESSAGES/: django.po
djoser/locale/id/LC_MESSAGES/: django.po
djoser/locale/ja/LC_MESSAGES/: django.po
djoser/locale/ka/LC_MESSAGES/: django.po
djoser/locale/me/LC_MESSAGES/: django.po
djoser/locale/nl/LC_MESSAGES/: django.po
djoser/locale/pl/LC_MESSAGES/: django.po
djoser/passwordless/: apps.py  email.py  models.py  serializers.py  services.py  sms.py  urls.py  utils.py  views.py
djoser/passwordless/migrations/: 0001_initial.py
djoser/pipelines/: __init__.py  base.py  email.py  password_reset.py  password_reset_confirm.py  password_update.py  token_create.py  token_delete.py  token_destroy.py  user_activate.py  user_create.py  user_delete.py  user_detail.py  user_update.py  username_update.py
djoser/social/: serializers.py  urls.py  views.py
djoser/social/backends/: facebook.py
djoser/social/token/: jwt.py
djoser/templates/: activation_email_body.html  activation_email_body.txt  activation_email_subject.txt  confirmation_email_body.html  confirmation_email_body.txt  confirmation_email_subject.txt  password_reset_email_body.html  password_reset_email_body.txt  reregistration_email_body.html  reregistration_email_body.txt  reregistration_email_subject.txt  reregistration_inactive_email_body.html  reregistration_inactive_email_body.txt
djoser/templates/email/: activation.html  confirmation.html  password_changed_confirmation.html  password_reset.html  passwordless_request.html  username_changed_confirmation.html  username_reset.html
djoser/token/: authentication.py  models.py  serializers.py
djoser/token/migrations/: 0001_initial.py
djoser/token/south_migrations/: 0001_initial.py
djoser/urls/: __init__.py  activation.py  authtoken.py  base.py  jwt.py  me.py  password.py  user.py  username.py  utils.py
djoser/views/: __init__.py  activation.py  base.py  me.py  password.py  user.py  username.py
djoser/views/activation/: __init__.py  activate.py  resend.py
djoser/views/me/: __init__.py  base.py  delete.py  retrieve.py  update.py
djoser/views/password/: __init__.py  reset.py  reset_confirm.py  set.py
djoser/views/token/: create.py  destroy.py
djoser/views/user/: __init__.py  activation.py  base.py  create.py  delete.py  list.py  me.py  password.py  password_reset_confirm.py  resend_activation.py  reset_password.py  reset_username.py  reset_username_confirm.py  retrieve.py  set_password.py  set_username.py  update_patch.py  update_put.py  user.py  username.py
djoser/views/username/: __init__.py  reset.py  reset_confirm.py  set.py
djoser/webauthn/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
djoser/webauthn/migrations/: 0001_initial.py
docs/: Makefile  make.bat
docs/source/: adjustment.rst  authentication_backends.rst  base_endpoints.rst  conf.py  emails.rst  endpoints.rst  examples.rst  features.rst  getting_started.rst  index.rst  installation.rst  introduction.rst  jwt_endpoints.rst  license.rst  migration_guide.rst  sample_usage.rst  settings.rst  signals.rst  social_endpoints.rst  token_endpoints.rst  webauthn.rst
docs/source/basics/: authentication_backends.rst  installation.rst  license.rst
docs/source/getting_started/: hello_pipelines.rst  hello_request.rst  settings.rst
examples/: manage.py  requirements.pip
examples/examples/: settings.py  urls.py  wsgi.py
pip-wheel-metadata/djoser.dist-info/: METADATA  top_level.txt
testproject/: auth_backends.py  conftest.py  settings.py  urls.py
testproject/templates/registration/: password_reset_email.html
testproject/testapp/: factories.py  models.py  sanitizers.py  tests.py  validators.py
testproject/testapp/templates/: webauthn.html
testproject/testapp/tests/: common.py  test_activation.py  test_compat.py  test_configurable_views.py  test_email.py  test_login.py  test_logout.py  test_me_base.py  test_password_reset.py  test_password_reset_confirm.py  test_registration.py  test_resend_activation.py  test_reset_username.py  test_reset_username_confirm.py  test_root.py  test_serializers_manager.py  test_set_password.py  test_set_username.py  test_settings.py  test_token_create.py  test_token_create_custom_username_login_fields.py  test_token_destroy.py  test_translations.py  test_user_create.py  test_user_delete.py  test_user_detail.py  test_user_list.py  test_user_me.py  test_user_patch.py  test_user_view.py  test_util.py
tests/: common.py  conftest.py  settings.py  test_settings.py  urls.py
tests/pipelines/: test_email.py  test_password_reset.py  test_password_reset_confirm.py  test_password_update.py  test_token_create.py  test_token_delete.py  test_token_destroy.py  test_user_activate.py  test_user_create.py  test_user_delete.py  test_user_detail.py  test_user_update.py  test_username_update.py
tests/views/: test_password_reset.py  test_password_reset_confirm.py  test_password_update.py  test_token_create.py  test_token_delete.py  test_user_activate.py  test_user_create.py  test_user_delete.py  test_user_detail.py  test_user_update.py  test_username_update.py
(+23 files in other folders)
